beginnings of lec 13

--- a/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
+++ b/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "da4966cd-1efb-4f4d-8dd2-043881c3df82",
    "metadata": {},
    "source": [
     "---\n",
@@ -17,7 +16,8 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: \n",
+    "keywords: linear systems, \n",
+    "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
     "  '\\em': '\\end{bmatrix}'\n",
@@ -27,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e65afff3-aa89-437c-83e5-81cf70d35791",
    "metadata": {},
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb)\n",
@@ -37,7 +36,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d4db29-f1f7-4981-841f-942a7a56e65d",
    "metadata": {},
    "source": [
     "## Reading\n",
@@ -52,45 +50,54 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9140b834-c196-4e32-be6d-c7936f49b540",
    "metadata": {},
    "source": [
-    "\\section*{Complex Eigenvalues and Linear Dynamical Systems}\n",
+    "## Complex Eigenvalues and Linear Dynamical Systems\n",
     "\n",
-    "Let's apply our solution method for linear dynamical systems to $\\dot{x} = Ax$ with\n",
-    "\\[A = \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix}\\]\n",
-    "that we saw last class. Recall that $A$ has eigenvalue/eigenvector pairs:\n",
+    "Let's apply our solution method for linear dynamical systems to $\\dot{\\vv x} = A \\vv x$ with\n",
+    "$A = \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix}$ that we saw in the previous lecture. Recall that $A$ has eigenvalue/eigenvector pairs:\n",
     "\n",
-    "\\[\\lambda_1 = i, v_1 = \\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} \\quad \\text{and} \\quad \\lambda_2 = -i, v_2 = \\begin{bmatrix} 1 \\\\ i \\end{bmatrix}.\\]\n",
+    "\\begin{equation}\n",
+    "\\label{eig_vals}\n",
+    "\\lambda_1 = i, \\ \\vv v_1 = \\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} \\quad \\text{and} \\quad \\lambda_2 = -i, \\vv v_2 = \\begin{bmatrix} 1 \\\\ i \\end{bmatrix}.\n",
+    "\\end{equation}\n",
     "\n",
-    "Even though these have complex entries, we can still use the approach from last class. We write the solution to $\\dot{x} = Ax$ as\n",
+    "Even though [these](#eig_vals) have complex entries, we can still use the approach from last class. We write the solution to $\\dot{\\vv x} = A\\vv x$ as\n",
     "\n",
-    "\\[x(t) = c_1e^{it}v_1 + c_2e^{-it}v_2 = c_1e^{it}\\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} + c_2e^{-it}\\begin{bmatrix} 1 \\\\ i \\end{bmatrix}, \\quad (SOL)\\]\n",
+    "\\begin{equation}\n",
+    "\\label{sol}\n",
+    "\\vv x(t) = c_1e^{\\lambda_1 t}\\vv v_1 + c_2e^{\\lambda_2t}\\vv v_2 = c_1e^{it}\\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} + c_2e^{-it}\\begin{bmatrix} 1 \\\\ i \\end{bmatrix}, \\quad (\\text{SOL})\n",
+    "\\end{equation}\n",
     "\n",
-    "i.e., $x(t)$ is a linear combination of the two solutions\n",
+    "i.e., $\\vv x(t)$ is a linear combination of the two solutions\n",
     "\n",
-    "\\[x_1(t) = c_1e^{it}\\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} \\quad \\text{and} \\quad x_2(t) = c_2e^{-it}\\begin{bmatrix} 1 \\\\ i \\end{bmatrix}. \\quad (BASE)\\]\n",
+    "\\begin{equation}\n",
+    "\\label{base}\n",
+    "\\vv x_1(t) = c_1e^{it}\\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} \\quad \\text{and} \\quad \\vv x_2(t) = c_2e^{-it}\\begin{bmatrix} 1 \\\\ i \\end{bmatrix}. \\quad (\\text{BASE})\n",
+    "\\end{equation}\n",
     "\n",
-    "and then solve for $c_1$ and $c_2$ to ensure compatibility with the initial condition $x(0)$. In general $c_1$ and $c_2$ will also be complex numbers, and $x(t)$ will take complex values. This is mathematically correct, and indeed one can study dynamical systems evolving over complex numbers.\n",
+    "and then solve for $c_1$ and $c_2$ to ensure compatibility with the initial condition $\\vv x(0)$. In general $c_1$ and $c_2$ will also be complex numbers, and $\\vv x(t)$ will take complex values. This is mathematically correct, and indeed one can study dynamical systems evolving over complex numbers.\n",
     "\n",
-    "However, in this class, and in most engineering applications, we are interested in real solutions to $\\dot{x} = Ax$. So if we want real solutions, it might make sense to try to find different \"base\" solutions than $x_1(t)$ and $x_2(t)$ that still span all possible solutions to $\\dot{x} = Ax$. Our key tool for accomplishing this is Euler's formula, which states that for any $t \\in \\mathbb{R}$,\n",
+    "However, in this class, and in most engineering applications, we are interested in _real solutions to $\\dot{\\vv x} = A\\vv x$_. If we know want real solutions, it might make sense to try to find different \"base\" solutions than $\\vv x_1(t)$ and $\\vv x_2(t)$ that still span all possible solutions to $\\dot{\\vv x} = A\\vv x$. Our key tool for accomplishing this is [Euler's formula](https://en.wikipedia.org/wiki/Euler%27s_formula), which states that for any $t \\in \\mathbb{R}$,\n",
     "\n",
-    "\\[e^{it} = \\cos t + i \\sin t \\quad (EUL).\\]\n",
+    "\\begin{equation}\n",
+    "\\label{eul}\n",
+    "e^{it} = \\cos t + i \\sin t \\quad (\\text{EUL}).\n",
+    "\\end{equation}\n",
     "\n",
-    "We apply (EUL) to (BASE), and obtain (after simplifying):\n",
+    "We apply ([EUL](#eul)) to ([BASE](#base)), and obtain (after simplifying):\n",
     "\n",
-    "\\[x_1(t) = e^{it}\\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} = \\begin{bmatrix} \\cos t \\\\ -\\sin t \\end{bmatrix} + i\\begin{bmatrix} \\sin t \\\\ \\cos t \\end{bmatrix}\\]\n",
+    "$$\n",
+    "\\vv x_1(t) = e^{it}\\begin{bmatrix} 1 \\\\ -i \\end{bmatrix} = \\begin{bmatrix} \\cos t \\\\ -\\sin t \\end{bmatrix} + i\\begin{bmatrix} \\sin t \\\\ \\cos t \\end{bmatrix}\n",
+    "$$\n",
     "\n",
     "and\n",
     "\n",
-    "\\[x_2(t) = e^{-it}\\begin{bmatrix} 1 \\\\ i \\end{bmatrix} = \\begin{bmatrix} \\cos t \\\\ \\sin t \\end{bmatrix} - i\\begin{bmatrix} \\sin t \\\\ -\\cos t \\end{bmatrix}.\\]\n",
+    "$$ \n",
+    "\\vv x_2(t) = e^{-it}\\begin{bmatrix} 1 \\\\ i \\end{bmatrix} = \\begin{bmatrix} \\cos t \\\\ \\sin t \\end{bmatrix} - i\\begin{bmatrix} \\sin t \\\\ \\cos t \\end{bmatrix}.\n",
+    "$$\n",
     "\n",
-    "We've made some progress, in that $x_1(t)$ and $x_2(t)$ are now in the \"standard\" complex number form $a+ib$, and that $x_1(t) = \\overline{x_2(t)}$, i.e. they are clearly complex conjugates of each other. We use this observation strategically to\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "Define two new \"base\" solutions:\n",
+    "We've made some progress, in that $\\vv x_1(t)$ and $\\vv x_2(t)$ are now in the \"standard\" complex number form $a+ib$, and that $\\vv x_1(t) = \\overline{\\vv x_2(t)}$, i.e. they are clearly complex conjugates of each other. We use this observation strategically to define two new \"base\" solutions:\n",
     "\n",
     "\\[\\hat{x}_1(t) = \\frac{1}{2}(x_1(t) + x_2(t)) = \\frac{1}{2}(x_1(t) + \\overline{x_1(t)}) = \\begin{bmatrix} \\cos t \\\\ \\sin t \\end{bmatrix} (= \\text{Re}\\{x_1(t)\\})\\]\n",
     "\n",
@@ -154,9 +161,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e29224a0-b77f-4fb5-b8a6-5846f1ea8212",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -182,5 +195,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
