invariant subspaces added

--- a/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -201,6 +201,7 @@
     "of the columns $\\vv a_,  \\vv a_2, \\ldots , \\vv a_n$ of $A = \\bm \\vv a_1 & \\vv a_2 & \\ldots & \\vv a_n\\em$ weighted by the elements $x_i$ of $\\vv x$. By letting the coefficients $x_1, x_2, \\ldots, x_n$ vary, we can descsribe the subspace spanned by the columns of $A$, aptly named the _column space_ of $A$.\n",
     "\n",
     ":::{prf:definition} Column Space\n",
+    ":label: col_space_defn\n",
     "The column space of an $m \\times n$ matrix $A$, written as Col$(A)$, is the set of all linear combinations of the columns of $A =  \\bm \\vv a_1 & \\vv a_2 & \\ldots & \\vv a_n\\em$:\n",
     "\\begin{equation}\n",
     "\\label{col_eqn}\n",
