more content in chapter 7 and started chapter 8

--- a/06_Ch_7_Dynamics/084-Invariant_Sub.ipynb
+++ b/06_Ch_7_Dynamics/084-Invariant_Sub.ipynb
@@ -304,6 +304,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The matrix $A$ has imaginary eigenvalues $\\lambda_{\\pm} = \\pm i \\sqrt{\\frac{k}{m}}$ (what physical intuition might have suggested this?), with corresponding eigenvectors\n",
+    "\n",
+    "\\[\n",
+    "v_{\\pm} = \\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix} \\pm i \\begin{pmatrix} 0 \\\\ \\sqrt{\\frac{m}{k}} \\end{pmatrix}\n",
+    "\\]\n",
+    "\n",
+    "Therefore, solutions are weighted sums of\n",
+    "\n",
+    "\\begin{align*}\n",
+    "x_{\\pm}(t) &= e^{\\pm i\\sqrt{\\frac{k}{m}}t} \\left(\\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix} \\pm i \\begin{pmatrix} 0 \\\\ \\sqrt{\\frac{m}{k}} \\end{pmatrix}\\right) \\\\\n",
+    "&= \\begin{pmatrix} \\cos(\\sqrt{\\frac{k}{m}}t) \\\\ \\pm \\sin(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} \\pm i \\begin{pmatrix} \\sin(\\sqrt{\\frac{k}{m}}t) \\\\ \\cos(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "but, really we want real solutions, we write the general solution as\n",
+    "\n",
+    "\\begin{align*}\n",
+    "x(t) &= c_1 \\text{Re}\\{x_+(t)\\} + c_2 \\text{Im}\\{x_+(t)\\} \\\\\n",
+    "&= c_1 \\begin{pmatrix} \\cos(\\sqrt{\\frac{k}{m}}t) \\\\ \\sin(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} + c_2 \\begin{pmatrix} \\sin(\\sqrt{\\frac{k}{m}}t) \\\\ \\cos(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} \\\\\n",
+    "&= \\begin{pmatrix} \\cos(\\sqrt{\\frac{k}{m}}t) & \\sin(\\sqrt{\\frac{k}{m}}t) \\\\ -\\sin(\\sqrt{\\frac{k}{m}}t) & \\cos(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} \\begin{pmatrix} c_1 \\\\ c_2 \\end{pmatrix} = \\begin{pmatrix} \\cos(\\sqrt{\\frac{k}{m}}t) & \\sin(\\sqrt{\\frac{k}{m}}t) \\\\ -\\sin(\\sqrt{\\frac{k}{m}}t) & \\cos(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} \\begin{pmatrix} p(0) \\\\ v(0) \\end{pmatrix}\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $x(0) = \\begin{pmatrix} c_1 \\\\ c_2 \\end{pmatrix} = \\begin{pmatrix} p(0) \\\\ v(0) \\end{pmatrix}$. Thus we see that a single mass connected to a fixed support by a spring oscillates with frequency $\\sqrt{\\frac{k}{m}}$ in the absence of external forces like friction or damping.\n",
+    "\n",
+    "Note: we could also have computed $x(t) = e^{At}x(0)$ by directly computing the matrix exponential from the power series definition (MRS).\n",
+    "\n",
+    "Next, we modify our problem to make it a bit more realistic to add friction, which is proportional to $\\dot{p}$. Newton's law then becomes:\n",
+    "\n",
+    "\\[\n",
+    "m\\ddot{p} + b\\dot{p} + kp = 0.\n",
+    "\\]\n",
+    "\n",
+    "Defining $x = (p,\\dot{p})$ as before, our first order reformulation becomes:\n",
+    "\n",
+    "\\[\n",
+    "\\dot{x} = \\begin{pmatrix} 0 & 1 \\\\ -\\frac{k}{m} & -\\frac{b}{m} \\end{pmatrix} \\begin{pmatrix} p \\\\ \\dot{p} \\end{pmatrix} = Ax.\n",
+    "\\]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The eigenvalues of $A$ are the solutions to the characteristic equation:\n",
+    "\n",
+    "\\[\n",
+    "m\\lambda^2 + b\\lambda + k = 0. \\tag{*}\n",
+    "\\]\n",
+    "\n",
+    "There are three possible cases:\n",
+    "\n",
+    "Overdamped: If $b > 2\\sqrt{mk}$ then the equation (*) has two negative real roots\n",
+    "\n",
+    "\\[\n",
+    "\\lambda_{\\pm} = -\\frac{b \\pm \\sqrt{b^2 - 4mk}}{2m},\n",
+    "\\]\n",
+    "\n",
+    "and thus the solution is given by a linear combination of two decaying exponentials\n",
+    "\n",
+    "\\[\n",
+    "x(t) = c_1 e^{\\lambda_+ t} v_+ + c_2 e^{\\lambda_- t} v_-,\n",
+    "\\]\n",
+    "\n",
+    "for $v_{\\pm}$ the corresponding real eigenvectors of $\\lambda_{\\pm}$. Such a system has so much friction that it no longer oscillates!\n",
+    "\n",
+    "Underdamped: If $0 < b < 2\\sqrt{mk}$, then (*) has two complex-conjugate roots:\n",
+    "\n",
+    "\\[\n",
+    "\\lambda_{\\pm} = -\\frac{b}{2m} \\pm i\\frac{\\sqrt{4mk-b^2}}{2m} =: -\\mu \\pm ir.\n",
+    "\\]\n",
+    "\n",
+    "With a little bit of effort, we can compute the matrix exponential here as\n",
+    "\n",
+    "\\[\n",
+    "e^{At} = e^{-\\mu t} \\begin{bmatrix} \\cos rt & \\sin rt \\\\ -\\sin rt & \\cos rt \\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "so that $x(t) = e^{At} \\begin{bmatrix} p(0) \\\\ \\dot{p}(0) \\end{bmatrix}$. In contrast to the undamped\n",
+    "\n",
+    "setting, we see here that oscillations continue at fixed frequency $r = \\sqrt{\\frac{k}{m} - \\frac{b^2}{4m^2}}$,\n",
+    "\n",
+    "while the entire trajectory also decays exponentially at rate $\\mu = \\frac{b}{2m}$. Thus\n",
+    "\n",
+    "for small friction, we eventually stop moving, but continue to oscillate as we\n",
+    "\n",
+    "go to the origin.\n",
+    "\n",
+    "Critically damped: The borderline case occurs when $b = b_c = 2\\sqrt{mk}$, in which case\n",
+    "our matrix $A$ has one eigenvalue $\\lambda = -\\frac{b}{2m}$, and is similar to the Jordan block\n",
+    "\n",
+    "\\[\n",
+    "J_2 = \\begin{bmatrix} -\\frac{b}{2m} & 1 \\\\ 0 & -\\frac{b}{2m} \\end{bmatrix}\n",
+    "\\]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the techniques we saw last class, we compute the matrix exponential\n",
+    "\n",
+    "\\[\n",
+    "e^{At} = \\begin{bmatrix}\n",
+    "e^{\\lambda t} & te^{\\lambda t} \\\\\n",
+    "\\lambda e^{\\lambda t} & e^{\\lambda t} + \\lambda te^{\\lambda t}\n",
+    "\\end{bmatrix} \\quad \\text{(please double check!)}\n",
+    "\\]\n",
+    "\n",
+    "and thus our solution is\n",
+    "\n",
+    "\\[\n",
+    "\\begin{bmatrix}\n",
+    "p(t) \\\\\n",
+    "\\dot{p}(t)\n",
+    "\\end{bmatrix} = e^{At} \\begin{bmatrix}\n",
+    "p(0) \\\\\n",
+    "\\dot{p}(0)\n",
+    "\\end{bmatrix} = e^{\\lambda t} \\left(\n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\\n",
+    "\\lambda\n",
+    "\\end{bmatrix} p(0) + \n",
+    "\\begin{bmatrix}\n",
+    "t \\\\\n",
+    "1 + \\lambda t\n",
+    "\\end{bmatrix} \\dot{p}(0)\n",
+    "\\right).\n",
+    "\\]\n",
+    "\n",
+    "Even though the formula looks quite different, the qualitative behavior is very similar to the overdamped case, as when $t \\to \\infty$, the exponential decay $e^{-\\frac{b}{2m}t}$ governs the system's behavior. This corresponds to a non-vibrating solution with the slowest possible decay rate -- any further reduction in $b$ will allow for a damped slowly oscillatory vibration to appear."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/06_Ch_7_Dynamics/084-Invariant_Sub.ipynb)"
    ]
   },
