--- a/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
+++ b/06_Ch_7_Dynamics/081-complex_eig_LDS.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "title: 7.1 Complex Eigen Values and Linear Dynamical Systems\n",
     "subject: Dynamics\n",
-    "subtitle: \n",
+    "subtitle: Euler breaks down complex exponentials\n",
     "short_title: 7.1 Complex Eigen Values and Linear Dynamical Systems\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -16,7 +16,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: linear systems, \n",
+    "keywords: complex eigen values, complex conjugates, euler's formula, real eigensolutions\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -40,21 +40,20 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be found in ALA .\n",
+    "Material related to this page, as well as additional exercises, can be found in ALA 10.1 and 10.3.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- examples of matrices with complex eigen values\n",
     "- the Euler's formula \n",
-    "- how to write real solutions to linear dynamical systems with complex eigen values"
+    "- how to write real solutions to linear dynamical systems that have complex eigen values"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Complex Eigenvalues and Linear Dynamical Systems\n",
+    "## Solution to Linear Dynamical Systems\n",
     "\n",
     "Let's apply our solution method for linear dynamical systems to $\\dot{\\vv x} = A \\vv x$ with\n",
     "$A = \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix}$ that we saw in the previous lecture. Recall that $A$ has eigenvalue/eigenvector pairs:\n",
