--- a/06_Ch_7_Dynamics/082-rep_eig_jord_LDS.ipynb
+++ b/06_Ch_7_Dynamics/082-rep_eig_jord_LDS.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "title: 7.2 Repeated Eigen Values, Jordan Forms, and Linear Dynamical Systems\n",
     "subject: Dynamics\n",
-    "subtitle: \n",
+    "subtitle: multiplicity of eigen values\n",
     "short_title: 7.2 Repeated Eigen Values, Jordan Forms, and Linear Dynamical Systems\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -16,7 +16,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: linear systems, \n",
+    "keywords: Jordan matrices, algebraic multiplicity, geometric multiplicity \n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -40,7 +40,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be found in ALA .\n",
+    "Material related to this page, as well as additional exercises, can be found in ALA 8.6, 10.1 and 10.3.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
@@ -57,7 +57,7 @@
    "source": [
     "## Repeated Eigenvalues, Jordan Forms, and Linear Dynamical Systems\n",
     "\n",
-    "Let's revisit the matrix $A = \\begin{bmatrix} 2 & 1 \\\\ 0 & 2 \\end{bmatrix}$ we saw in the previous lecture. This matrix has an eigenvalue $\\lambda = 2$ of algebraic multiplicity 2 ($\\det(A-\\lambda I) = (\\lambda-2)^2 = 0$ $\\Leftrightarrow \\lambda_1 = \\lambda_2 = 2$) but geometric multiplicity 1, i.e., only one linearly independent eigenvector\n",
+    "Let's revisit the matrix $A = \\begin{bmatrix} 2 & 1 \\\\ 0 & 2 \\end{bmatrix}$ we saw in the previous lecture. This matrix has an eigenvalue $\\lambda = 2$ of algebraic multiplicity 2: ($\\det(A-\\lambda I) = (\\lambda-2)^2 = 0$ $\\Leftrightarrow \\lambda_1 = \\lambda_2 = 2$) but geometric multiplicity 1, i.e., only one linearly independent eigenvector\n",
     "$$\n",
     "\\mathbf{v}_1 = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix},\n",
     "$$\n",
