--- a/06_Ch_7_Dynamics/083-Matrix_exponential.ipynb
+++ b/06_Ch_7_Dynamics/083-Matrix_exponential.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "title: 7.3 Matrix Exponential\n",
     "subject: Dynamics\n",
-    "subtitle: \n",
+    "subtitle: power series of a matrix\n",
     "short_title: 7.3 Matrix Exponential\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -16,7 +16,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: linear systems, \n",
+    "keywords: power series, general solution, linear dynamical systems\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -40,7 +40,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be found in ALA .\n",
+    "Material related to this page, as well as additional exercises, can be found in ALA 10.4.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
