--- a/06_Ch_7_Dynamics/084-Invariant_Sub.ipynb
+++ b/06_Ch_7_Dynamics/084-Invariant_Sub.ipynb
@@ -149,41 +149,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\section*{Example: Consider the rotation (permutation) matrix:}\n",
+    ":::{prf:example}\n",
+    "Consider the rotation (permutation) matrix\n",
     "\n",
-    "\\[A = \\begin{pmatrix}\n",
+    "$$\n",
+    "A = \\bm\n",
     "0 & 1 & 0 \\\\\n",
     "0 & 0 & 1 \\\\\n",
     "1 & 0 & 0\n",
-    "\\end{pmatrix}\\]\n",
+    "\\em\n",
+    "$$\n",
     "\n",
-    "It has one real eigenvalue, $\\lambda_1 = 1$, and two complex conjugate eigenvalues, $\\lambda_2 = \\frac{1}{2} + i\\frac{\\sqrt{3}}{2}$ and $\\lambda_3 = \\frac{1}{2} - i\\frac{\\sqrt{3}}{2}$. The corresponding eigenvectors are:\n",
+    "It has one real eigenvalue, $\\lambda_1 = 1$, and two complex conjugate eigenvalues, $\\lambda_2 = \\frac{1}{2} + \\frac{\\sqrt{3}}{2}i$ and $\\lambda_3 = \\frac{1}{2} - \\frac{\\sqrt{3}}{2}i$. The corresponding eigenvectors are:\n",
     "\n",
-    "\\[v_1 = \\begin{pmatrix} 1 \\\\ 1 \\\\ 1 \\end{pmatrix}, \\quad\n",
-    "v_2 = \\begin{pmatrix} -\\frac{1}{2} + i\\frac{\\sqrt{3}}{2} \\\\ -\\frac{1}{2} - i\\frac{\\sqrt{3}}{2} \\\\ 1 \\end{pmatrix}, \\quad\n",
-    "v_3 = \\begin{pmatrix} -\\frac{1}{2} - i\\frac{\\sqrt{3}}{2} \\\\ -\\frac{1}{2} + i\\frac{\\sqrt{3}}{2} \\\\ 1 \\end{pmatrix}\\]\n",
+    "$$\n",
+    "\\vv v_1 = \\bm 1 \\\\ 1 \\\\ 1 \\em, \\quad\n",
+    "\\vv v_2 = \\bm -\\frac{1}{2}  \\\\ -\\frac{1}{2}  \\\\ 1 \\end{bmatrix} + \n",
+    "i\\bm \\frac{\\sqrt{3}}{2} \\\\ -\\frac{\\sqrt{3}}{2} \\\\ 0\\em, \\quad\n",
+    "\\vv v_3 = \\bm -\\frac{1}{2} \\\\ -\\frac{1}{2} \\\\ 1 \\em - i\\bm \\frac{\\sqrt{3}}{2} \\\\ \\frac{\\sqrt{3}}{2} \\\\ 0\\em\n",
+    "$$\n",
     "\n",
-    "The complex invariant subspaces are spanned by $c_1v_1$, $c_2v_2$, or $c_3v_3$. There is a single 1d real invariant subspace spanned by $v_1 = (1,1,1)$, and a single 2d real invariant subspace spanned by $\\text{Re}\\{v_2\\} = (-\\frac{1}{2}, -\\frac{1}{2}, 1)$ and $\\text{Im}\\{v_2\\} = (\\frac{\\sqrt{3}}{2}, -\\frac{\\sqrt{3}}{2}, 0)$ which is the orthogonal complement to $v_1$. We can interpret $v_1$ as the axis of rotation, and $A$ acts as a 2d rotation on its orthogonal complement.\n",
+    "The complex invariant subspaces are spanned by $0, 1, 2$ or $3$ of $\\vv v_1$, $\\vv v_2$, or $\\vv v_3$. There is a single 1d real invariant subspace spanned by $\\vv v_1 = \\bm 1 \\\\ 1 \\\\ 1\\em$, and a single 2d real invariant subspace spanned by $\\text{Re}\\{\\vv v_2\\} = \\bm -\\frac{1}{2} \\\\ -\\frac{1}{2} \\em$ and $\\text{Im}\\{\\vv v_2\\} = \\bm \\frac{\\sqrt{3}}{2} \\\\ -\\frac{\\sqrt{3}}{2} \\\\ 0 \\em$ which is the orthogonal complement to $\\vv v_1$. We can interpret $\\vv v_1$ as the axis of rotation, and $A$ acts as a 2d rotation on its orthogonal complement.\n",
+    ":::\n",
     "\n",
-    "Online notes: would be good to have a maple/lib worksheet illustrating this.\n",
+    "**TO DO**: would be good to have a matplotlib widget illustrating this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Invariant Subspaces and Linear Dynamical Systems\n",
     "\n",
-    "\\section*{Invariant Subspaces and Linear Dynamical Systems (HLA 10.4)}\n",
+    "Here we give a very brief preview of the role of invariant subspaces in dynamical systems. You will see this in much more detail in ESE 2100.\n",
     "\n",
-    "Here we give a very brief preview of the role of invariant subspaces in dynamical systems. You will see this in much more detail in ESE 520.\n",
+    "We call a subset $S \\subset \\mathbb{R}^n$ _invariant for $\\dot{\\vv x} = Ax$_ if, whenever $\\vv x(0) = \\vv b \\in S$ then the solution $\\vv x(t) \\in S$ for all $t \\geq 0$. It turns out, invariant subspaces of $A$ precisely characterize these subsets:\n",
     "\n",
-    "We call a subset $S \\subset \\mathbb{R}^n$ invariant for $\\dot{x} = Ax$ if, whenever $x(0) = b \\in S$ then the solution $x(t) \\in S$ for all $t \\geq 0$. It turns out, invariant subspaces of $A$ precisely characterize these subsets:\n",
+    "::::{prf:proposition}\n",
+    ":label: invariant_prop\n",
+    "If $S \\subset \\mathbb{R}^n$ is an invariant subspace of $A$, then it is invariant under $\\dot{\\vv x} = Ax$.\n",
     "\n",
-    "\\begin{proposition}\n",
-    "If $S \\subset \\mathbb{R}^n$ is an invariant subspace of $A$, then it is invariant under $\\dot{x} = Ax$.\n",
-    "\\end{proposition}\n",
+    ":::{prf:proof} Proof of [](#invariant_prop)\n",
+    ":label: proof-invariant_prop\n",
+    ":class: dropdown\n",
     "\n",
-    "The proof follows from our solution $x(t) = e^{At}x(0) = e^{At}b$. Using (MPS), we have:\n",
+    "The proof follows from our solution $\\vv x(t) = e^{At}\\vv x(0) = e^{At}\\vv b$. Using ([MPS](./083-Matrix_exponential.ipynb#MPS)), we have:\n",
     "\n",
-    "\\[x(t) = e^{At}b = \\sum_{k=0}^{\\infty} \\frac{t^k}{k!} A^k b. \\quad (*)\\]\n",
+    "\\begin{equation}\n",
+    "\\label{prop_eqn_1}\n",
+    "\\vv x(t) = e^{At}\\vv b = \\sum_{k=0}^{\\infty} \\frac{t^k}{k!} A^k \\vv b. \n",
+    "\\end{equation}\n",
     "\n",
-    "But if $b \\in S$, then $Ab \\in S$, $A^2b \\in S$, and in general $A^kb \\in S$ for any $k \\geq 0$. Since every term in $(*)$ belongs to $S$, then so does their (infinite) sum, hence $x(t) \\in S$.\n",
+    "But if $\\vv b \\in S$, then $A\\vv b \\in S$, $A^2\\vv b \\in S$, and in general $A^k\\vv b \\in S$ for any $k \\geq 0$. Since every term in [](#prop_eqn_1) belongs to $S$, then so does their (infinite) sum$^{1}$, hence $x(t) \\in S$.\n",
     "\n",
-    "This is because a subspace is a closed set, and so we are allowed to take infinite sums."
+    "\n",
+    "$^{1}$ This is because a subspace is a _closed set_, and so we are allowed to take infinite sums.\n",
+    ":::\n",
+    "::::\n",
+    "\n"
    ]
   },
   {
@@ -192,23 +215,23 @@
    "source": [
     "We will focus on the case of complete matrices $A$ with real eigenvalues and eigenvectors; extensions to the general case are similar, and rely on using Jordan blocks and taking Real/Imaginary parts of complex eigenvectors.\n",
     "\n",
-    "Suppose $A \\in \\mathbb{R}^{n \\times n}$ is complete with real eigenvalues/eigenvectors $(\\lambda_1, v_1), \\ldots, (\\lambda_n, v_n)$. Let's split the eigenvectors according to whether $\\lambda_i < 0$, $\\lambda_i = 0$, $\\lambda_i > 0$, and define the following invariant subspaces:\n",
+    ":::{prf:definition} Invariant Subspaces of Complete Matrices\n",
+    ":label: inv_sub_complete_mat_defn\n",
+    "Suppose $A \\in \\mathbb{R}^{n \\times n}$ is complete with real eigenvalues/eigenvectors $(\\lambda_1, \\vv v_1), \\ldots, (\\lambda_n, \\vv v_n)$. Let's split the eigenvectors according to whether $\\lambda_i < 0$, $\\lambda_i = 0$, $\\lambda_i > 0$, and define the following invariant subspaces:\n",
     "\n",
-    "\\begin{itemize}\n",
-    "\\item The stable subspace $S \\subset \\mathbb{R}^n$ spanned by $v_i$ such that $\\lambda_i < 0$\n",
-    "\\item The center subspace $C \\subset \\mathbb{R}^n$ spanned by $v_i$ such that $\\lambda_i = 0$\n",
-    "\\item The unstable subspace $U \\subset \\mathbb{R}^n$ spanned by $v_i$ such that $\\lambda_i > 0$\n",
-    "\\end{itemize}\n",
+    "1. The _stable subspace_ $S \\subset \\mathbb{R}^n$ spanned by $\\vv v_i$ such that $\\lambda_i < 0$\n",
+    "2. The _center subspace_ $C \\subset \\mathbb{R}^n$ spanned by $\\vv v_i$ such that $\\lambda_i = 0$\n",
+    "3. The _unstable subspace_ $U \\subset \\mathbb{R}^n$ spanned by $\\vv v_i$ such that $\\lambda_i > 0$\n",
+    ":::\n",
     "\n",
-    "These subspaces are important, as they describe the long-term behavior of solutions to initial value problems. Without formally studying this observation, we make the following comments:\n",
+    "[These subspaces](#inv_sub_complete_mat_defn) are important, as they describe the long-term behavior of solutions with initial conditions within them. Before elucidating this observation, we make the following comments:\n",
+    ":::{note}\n",
+    "1. If there are no eigenvalues of the specified type, we set the corresponding subspace to $\\{\\vv 0\\}$.\n",
+    "2. $S \\cap C = S \\cap U = C \\cap U = \\{\\vv 0\\}$, i.e., their pairwise intersections are trivial.\n",
+    "3. $S + C + U = \\mathbb{R}^n$, i.e., any vector $\\vv v \\in \\mathbb{R}^n$ can be uniquely written as a sum $\\vv v = \\vv s + \\vv c + \\vv u$ with $\\vv s \\in S$, $\\vv c \\in C$, $\\vv u \\in U$.\n",
+    ":::\n",
     "\n",
-    "\\begin{itemize}\n",
-    "\\item If there are no eigenvalues of the specified type, we set the corresponding subspace to $\\{0\\}$.\n",
-    "\\item $S \\cap C = S \\cap U = C \\cap U = \\{0\\}$, i.e., their pairwise intersections are trivial.\n",
-    "\\item $S + C + U = \\mathbb{R}^n$, i.e., any vector $v \\in \\mathbb{R}^n$ can be uniquely written as a sum $v = s + c + u$ with $s \\in S$, $c \\in C$, $u \\in U$.\n",
-    "\\end{itemize}\n",
-    "\n",
-    "Remembering that to each eigenvalue/vector pair $(\\lambda_i, v_i)$ we can associate an eigenfunction $x_i(t) = e^{\\lambda_i t}v_i$, we can characterize the following long-term behavior of solutions to $\\dot{x} = Ax$:\n",
+    "Remembering that to each eigenvalue/vector pair $(\\lambda_i, \\vv v_i)$ we can associate an eigenfunction $\\vv x_i(t) = e^{\\lambda_i t}\\vv v_i$, we can characterize the following long-term behavior of solutions to $\\dot{\\vv x} = A\\vv x$:\n",
     "\n",
     "\\begin{theorem}\n",
     "Let $A \\in \\mathbb{R}^{n \\times n}$ be a complete matrix with real eigenvalues/eigenvectors. Let $0 \\neq b \\in \\mathbb{R}^n$ and $x(t)$ be a solution to $\\dot{x} = Ax$, $x(0) = b$. Then $b$, and hence $x(t)$, are in:\n",
